# ts-streaming-lz4

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  README.md  deno.json  jsr.json  justfile  mod.ts  package-lock.json  package.json
.github/workflows/: publish.yml
bench/: self_compress_bench.ts
scripts/: add-ts-header.ts
src/: error.rs  lib.rs  main.rs  stream.rs
