[package]
name = "streaming-lz4"
version = "0.1.0-a2"
authors = ["Michael Ekstrand <md@ekstrandom.net>"]
edition = "2018"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"
lz4_flex = "^0.11.3"
thiserror = "^1.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[profile.dev]
debug = true
split-debuginfo = "off"
