[package]
name = "streaming-lz4"
version = "0.1.0"
authors = ["Michael Ekstrand <md@ekstrandom.net>"]
edition = "2018"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.84"
lz4_flex = "^0.11.3"
thiserror = "^1.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
opt-level = 2
lto = true

[profile.dev]
debug = true
split-debuginfo = "off"
